--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -34,6 +34,9 @@
                     <li>
                         <a class="nav-link active" aria-current="page" href="/new">New Product</a>
                     </li>
+                    <li>
+                        <a class="nav-link active" aria-current="page" href="/register">Register</a>
+                    </li>
                 </ul>
             </div>
         </div>
