--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Inventory App</a>
+            <a class="navbar-brand" href="#">Inventory </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -36,6 +36,9 @@
                     </li>
                     <li>
                         <a class="nav-link active" aria-current="page" href="/register">Register</a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" aria-current="page" href="/login">Login</a>
                     </li>
                 </ul>
             </div>
